New home page is implemented with some change in source code for header and footer of all pages

--- a/contact_form.html
+++ b/contact_form.html
@@ -16,8 +16,7 @@
        UDEL email address: triudrav@udel.edu
        Course Number: CISC474 010
    -->
-        <div id="header">
-            <a href="aboutMe.html" id="aboutMeLink">About</a> &nbsp; &nbsp; &nbsp;
+        <div class="header">
             <a href="index.html" id="homePageLink">Home</a> &nbsp; &nbsp;
             <span class="dropdown">
                 <a href="javascript:void(0)" class="dropbtn">Class Links</a> &nbsp; &nbsp;
@@ -70,13 +69,12 @@
 
         </div>
 
-        <div id="footer">
+        <div class="footer">
             <br>
             <br>
             <br>
-            <a href="aboutMe.html" id="footer-aboutMeLink">About</a> &nbsp; &nbsp;
-            <a href="index.html" id="footer-homePageLink">Home </a> &nbsp; &nbsp;
-            <a href="contact_form.html" id="footer-contactFormLink">Contact</a> &nbsp; &nbsp;
+            <a href="index.html">Home</a> &nbsp; &nbsp;
+            <a href="contact_form.html">Contact</a> &nbsp; &nbsp;
             <br>
             <br>
             <img src="img/linkedin-logo-png.png" onclick="window.location.href='https://www.linkedin.com/in/raj-trivedi/'" id="linkedin-logo-img" alt="LinkedIn Logo Image" width="30" height="30"> &nbsp;&nbsp;
