--- a/index.html
+++ b/index.html
@@ -15,8 +15,7 @@
        Course Number: CISC474 010
    -->
 
-  <div id="header">
-   <a href="aboutMe.html" id="aboutMeLink">About</a> &nbsp; &nbsp; &nbsp;
+  <div class="header">
    <a href="index.html" id="homePageLink">Home</a> &nbsp; &nbsp;
    <span class="dropdown">
      <a href="javascript:void(0)" class="dropbtn">Class Links</a> &nbsp; &nbsp;
@@ -28,28 +27,82 @@
    </span>
    <a href="contact_form.html" id="contactFormLink">Contact</a> &nbsp; &nbsp;
   </div>
+
+     <!--
+       Name: Raj Trivedi
+       Assignment Name: Personal Website 2
+       UDEL email address: triudrav@udel.edu
+       Course Number: CISC474 010
+   -->
+
+  <div id="homepage-container">
+    <div id="myImage-container">
+      <img src="img/My_Image.jpg" id="my_image" alt="Professional Pic of myself">
+    </div>
   
-  <br>
+    <div id="education">
+      <h2> Education </h2>
+      <img id="ud_image" alt="Image of UD" src="img/UD_image.jpeg" width="100" height="100">
+      <b> Major - </b> Computer Science <br>
+      <b> School Year - </b> Senior <br>
+      <b> Graduation Date - </b> May 2022 <br>
+      <b> Concentration - </b> Network Systems <br>
+    </div>
 
-  <div id="myImage">
-   <img src="img/My_Image.jpg" id="my_image" alt="Professional Pic of myself" width="300" height="300">
-  </div>
+    <br>
+    <br>
 
-  <div id="homepageContent">
-   <b> Full name : </b> Raj Trivedi<br>
-   <b> Name in class : </b> Raj <br>
-   <b> Pronouns : </b> He/Him <br>
-   <br>
-   <p> This is CISC474 course on Advanced Web Technologies. <br> </p>
-  </div>
+    <div id="hobbiesInterests">
+      <h2> Hobbies/Interests </h2>
 
-  <div id="footer">
+      &nbsp; &nbsp;
+      <img src="img/singing_image.jpg" alt="Image of a Mic" width="300" height="300"> &nbsp; &nbsp;   
+      <img src="img/meditation_image.jpg" alt="Image of a person meditating" width="300" height="300">     
+      <br>
+
+      <b id="singing-img-text"> Singing </b>
+      <b id="meditation-img-text"> Meditation </b>
+      <br> 
+      <br> &nbsp; &nbsp;
+
+      <img src="img/nature_image.jpg" alt="Image of a trees in Fall" width="300" height="300"> &nbsp; &nbsp;
+      <img src="img/watching_sports_image.jpg" alt="Image of a TV Remote and Sports channel" width="300" height="300">
+      <br>
+
+      <b id="nature-img-text"> Walking out in nature </b>
+      <b id="sports-img-text"> Watching sports </b> 
+    </div>
+  
+    <br>
+    <br>
+
+    <div id="interestingFact">
+      <h2> Interesting Fact </h2>
+      <img id="small_baby_image" alt="Image of a small baby" src="img/small_baby_image.jpeg" width="200" height="200">
+      <p> I was born on midnight of December 31<sup>st</sup>, 1999. This means it was a change of a Century(from 20th to 21st). 
+      <br> Thus, my closed ones also call me <b>millennium boy.</b>
+      </p>
+    </div>
+
+    <div id="webDevelopmentAspect">  
+      <br>
+      <h2> Web Development </h2>
+      <p> The aspects of web development that I am most interested in are as follows: </p>
+      <ul id="bulleted-list">
+        <li> Visual Design </li>
+        <li> Content </li>
+        <li> Web/Mobile Friendly </li>
+        <li> User Interaction </li>
+      </ul>
+    </div>
+  </div>  
+
+  <div class="footer">
    <br>
    <br>
    <br>
-   <a href="aboutMe.html" id="footer-aboutMeLink">About</a> &nbsp; &nbsp; &nbsp;
-   <a href="index.html" id="footer-homePageLink">Home</a> &nbsp; &nbsp;
-   <a href="contact_form.html" id="footer-contactFormLink"> Contact</a> &nbsp; &nbsp;
+   <a href="index.html">Home</a> &nbsp; &nbsp;
+   <a href="contact_form.html"> Contact</a> &nbsp; &nbsp;
    <br>
    <br>
    <img src="img/linkedin-logo-png.png" onclick="window.location.href='https://www.linkedin.com/in/raj-trivedi/'" id="linkedin-logo-img" alt="LinkedIn Logo Image" width="30" height="30"> &nbsp;&nbsp;
