--- a/index.html
+++ b/index.html
@@ -43,10 +43,22 @@
     <div id="education">
       <h2> Education </h2>
       <img id="ud_image" alt="Image of UD" src="img/UD_image.jpeg" width="100" height="100">
+      <b> School - </b> University Of Delaware <br>
       <b> Major - </b> Computer Science <br>
       <b> School Year - </b> Senior <br>
       <b> Graduation Date - </b> May 2022 <br>
       <b> Concentration - </b> Network Systems <br>
+    </div>
+
+    <br>
+    <br>
+
+    <div id="postGraduateGoals">
+      <br>
+      <h2> Post-Graduation Goals </h2>
+      <p> Following my graduation, I would work with J.P. Morgan Chase & Co. as a Full-Time<br> Software Engineer.
+          Because I would join J.P. Morgan Chase & Co., I don't plan on <br> to attend grad school too soon.
+      </p>
     </div>
 
     <br>
@@ -79,9 +91,7 @@
     <div id="interestingFact">
       <h2> Interesting Fact </h2>
       <img id="small_baby_image" alt="Image of a small baby" src="img/small_baby_image.jpeg" width="200" height="200">
-      <p> I was born on midnight of December 31<sup>st</sup>, 1999. This means it was a change of a Century(from 20th to 21st). 
-      <br> Thus, my closed ones also call me <b>millennium boy.</b>
-      </p>
+      <p> &nbsp; I was born on midnight of December 31<sup>st</sup>, 1999. This <br> &nbsp; means it was a change of a Century(from 20th to 21st). <br> &nbsp; Thus, my closed ones also call me <b>millennium boy.</b> </p>
     </div>
 
     <div id="webDevelopmentAspect">  
