Added Home Page title in the center of screen

--- a/index.html
+++ b/index.html
@@ -36,6 +36,9 @@
    -->
 
   <div id="homepage-container">
+    <h2 id="homepageTitle"> BIO </h2>
+    <br>
+    <br>
     <div id="myImage-container">
       <img src="img/My_Image.jpg" id="my_image" alt="Professional Pic of myself">
     </div>
