Work Page is implemented; Might need to change UI a little bit

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html lang="en">
  <head>
   <link rel="stylesheet" href="css/styles.css">
-  <title> Index </title>
+  <title> Home - Raj Trivedi </title>
  </head>
 
  <body>
@@ -17,6 +17,7 @@
 
   <div class="header">
    <a href="index.html" id="homePageLink">Home</a> &nbsp; &nbsp;
+   <a href="work.html" id="workPageLink">Work</a> &nbsp; &nbsp;
    <span class="dropdown">
      <a href="javascript:void(0)" class="dropbtn">Class Links</a> &nbsp; &nbsp;
      <div class="dropdown-content">
@@ -27,13 +28,6 @@
    </span>
    <a href="contact_form.html" id="contactFormLink">Contact</a> &nbsp; &nbsp;
   </div>
-
-     <!--
-       Name: Raj Trivedi
-       Assignment Name: Personal Website 2
-       UDEL email address: triudrav@udel.edu
-       Course Number: CISC474 010
-   -->
 
   <div id="homepage-container">
     <h2 id="homepageTitle"> BIO </h2>
@@ -117,6 +111,7 @@
    <br>
    <br>
    <a href="index.html">Home</a> &nbsp; &nbsp;
+   <a href="work.html">Work</a> &nbsp; &nbsp;
    <a href="contact_form.html"> Contact</a> &nbsp; &nbsp;
    <br>
    <br>
