--- a/contact_form.html
+++ b/contact_form.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <title> Contact Me </title>
+        <title> Contact - Raj Trivedi </title>
         <script type="module" src="src/form.js"> </script>
         <link rel="stylesheet" href="css/styles.css">
         <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/emailjs-com@3/dist/email.min.js"></script>
@@ -18,6 +18,7 @@
    -->
         <div class="header">
             <a href="index.html" id="homePageLink">Home</a> &nbsp; &nbsp;
+            <a href="work.html" id="workPageLink">Work</a> &nbsp; &nbsp;
             <span class="dropdown">
                 <a href="javascript:void(0)" class="dropbtn">Class Links</a> &nbsp; &nbsp;
                 <div class="dropdown-content">
@@ -74,6 +75,7 @@
             <br>
             <br>
             <a href="index.html">Home</a> &nbsp; &nbsp;
+            <a href="work.html">Work</a> &nbsp; &nbsp;
             <a href="contact_form.html">Contact</a> &nbsp; &nbsp;
             <br>
             <br>
