--- a/contact_form.html
+++ b/contact_form.html
@@ -34,7 +34,7 @@
 
         <div id="form-container">
             <h2> Connect </h2>
-            <p>Please use the form on this page to <br> send a direct e-mail to Raj. While he <br> maintains a busy schedule, he will do <br> his best to respond in a timely manner. </p> <br>
+            <p>Please use the form on this page to <br> send a direct e-mail to me. While I <br> maintain a busy schedule, I will do <br> my best to respond in a timely manner. </p> <br>
             <img src="img/linkedin-logo-png.png" onclick="window.location.href='https://www.linkedin.com/in/raj-trivedi/'" id="linkedin-logo-img" alt="LinkedIn Logo Image" width="30" height="30"> &nbsp;&nbsp;
             <img src="img/github-logo-png.png" onclick="window.location.href='https://github.com/bluehenraj'" id="github-logo-img" alt="GitHub Logo Image" width="30" height="30"> &nbsp;&nbsp;
             <a href="mailto:triudrav@udel.edu"><img src="img/mail-logo-png.png" id="mail-logo-img" alt="Mail Logo Image" width="30" height="30"></a>
