Home Page is restructured; UI for footer of web pages is changed a bit

--- a/index.html
+++ b/index.html
@@ -61,6 +61,21 @@
     <br>
     <br>
 
+    <div id="webDevelopmentAspect">  
+      <br>
+      <h2> Web Development </h2>
+      <p> The aspects of web development that I am most interested in are as follows: </p>
+      <ul id="bulleted-list">
+        <li> Visual Design </li>
+        <li> Content </li>
+        <li> Web/Mobile Friendly </li>
+        <li> User Interaction </li>
+      </ul>
+    </div>
+    
+    <br>
+    <br>
+
     <div id="hobbiesInterests">
       <h2> Hobbies/Interests </h2>
 
@@ -90,21 +105,8 @@
       <img id="small_baby_image" alt="Image of a small baby" src="img/small_baby_image.jpeg" width="200" height="200">
       <p> &nbsp; I was born on midnight of December 31<sup>st</sup>, 1999. This <br> &nbsp; means it was a change of a Century(from 20th to 21st). <br> &nbsp; Thus, my closed ones also call me <b>millennium boy.</b> </p>
     </div>
-
-    <div id="webDevelopmentAspect">  
-      <br>
-      <h2> Web Development </h2>
-      <p> The aspects of web development that I am most interested in are as follows: </p>
-      <ul id="bulleted-list">
-        <li> Visual Design </li>
-        <li> Content </li>
-        <li> Web/Mobile Friendly </li>
-        <li> User Interaction </li>
-      </ul>
-    </div>
   </div>  
-  <br>
-  <br>
+
 
   <div class="footer">
    <br>
@@ -115,9 +117,16 @@
    <a href="contact_form.html"> Contact</a> &nbsp; &nbsp;
    <br>
    <br>
-   <img src="img/linkedin-logo-png.png" onclick="window.location.href='https://www.linkedin.com/in/raj-trivedi/'" id="linkedin-logo-img" alt="LinkedIn Logo Image" width="30" height="30"> &nbsp;&nbsp;
-   <img src="img/github-logo-png.png" onclick="window.location.href='https://github.com/bluehenraj'" id="github-logo-img" alt="GitHub Logo Image" width="30" height="30"> &nbsp;&nbsp;
-   <a href="mailto:triudrav@udel.edu"><img src="img/mail-logo-png.png" id="mail-logo-img" alt="Mail Logo Image" width="30" height="30"></a>
+   <br>
+   <div id="social-media-icons-container">
+    <br>
+    <br>
+    <img src="img/linkedin-logo-png.png" onclick="window.location.href='https://www.linkedin.com/in/raj-trivedi/'" id="linkedin-logo-img" alt="LinkedIn Logo Image" width="30" height="30"> &nbsp;&nbsp;
+    <img src="img/github-logo-png.png" onclick="window.location.href='https://github.com/bluehenraj'" id="github-logo-img" alt="GitHub Logo Image" width="30" height="30"> &nbsp;&nbsp;
+    <a href="mailto:triudrav@udel.edu"><img src="img/mail-logo-png.png" id="mail-logo-img" alt="Mail Logo Image" width="30" height="30"></a>
+    <br>
+    <br>
+   </div>
    <br>
    <br>
    <br>
