Extracurricular Events Page is implemented and done nicely

--- a/contact_form.html
+++ b/contact_form.html
@@ -19,6 +19,7 @@
         <div class="header">
             <a href="index.html" id="homePageLink">Home</a> &nbsp; &nbsp;
             <a href="work.html" id="workPageLink">Work</a> &nbsp; &nbsp;
+            <a href="events.html" id="eventsPageLink"> Extracurricular Events</a> &nbsp; &nbsp;
             <span class="dropdown">
                 <a href="javascript:void(0)" class="dropbtn">Class Links</a> &nbsp; &nbsp;
                 <div class="dropdown-content">
@@ -78,6 +79,7 @@
             <br>
             <a href="index.html">Home</a> &nbsp; &nbsp;
             <a href="work.html">Work</a> &nbsp; &nbsp;
+            <a href="events.html"> Extracurricular Events</a> &nbsp; &nbsp;
             <a href="contact_form.html">Contact</a> &nbsp; &nbsp;
             <br>
             <br>
