--- a/work.html
+++ b/work.html
@@ -18,6 +18,7 @@
   <div class="header">
    <a href="index.html" id="homePageLink">Home</a> &nbsp; &nbsp;
    <a href="work.html" id="workPageLink">Work</a> &nbsp; &nbsp;
+   <a href="events.html" id="eventsPageLink"> Extracurricular Events</a> &nbsp; &nbsp;
    <span class="dropdown">
      <a href="javascript:void(0)" class="dropbtn">Class Links</a> &nbsp; &nbsp;
      <div class="dropdown-content">
@@ -32,7 +33,7 @@
   <div id="workpage-container">
     <h2 id="workpageSectionOneTitle"> PROJECTS </h2>
     <div id="workpageSectionOne">
-    <p> As an undergrad Computer Science student, I did really exciting projects in all of my Computer Science courses. The below given list is definitely not a complete list of projects, however, it should
+    <p> As an undergrad with Computer Science major, I did really exciting projects in all of my Computer Science courses. The below given list is definitely not a complete list of projects, however, it should
         atleast give a glimpse of the type of projects that I was exposed to:
 
         <ol>
@@ -88,6 +89,7 @@
    <br>
    <a href="index.html">Home</a> &nbsp; &nbsp;
    <a href="work.html">Work</a> &nbsp; &nbsp;
+   <a href="events.html"> Extracurricular Events</a> &nbsp; &nbsp;
    <a href="contact_form.html"> Contact</a> &nbsp; &nbsp;
    <br>
    <br>
