Work Page and Extracurricular page restructured; Favicon is added(hopefully it works)

--- a/events.html
+++ b/events.html
@@ -3,6 +3,7 @@
 <html lang="en">
  <head>
   <link rel="stylesheet" href="css/styles.css">
+
   <title> Extracurricular Events - Raj Trivedi </title>
  </head>
 
@@ -45,7 +46,9 @@
     <div id="events-description">
         <p id="eventOneTitle"> Code For Good(CFG) Hackathon </p>
 
-        <img src="img/code_for_good_image.jpeg" id="code_for_good_img" alt="Example image of Code For Good event" width="700" height="700">
+        <div id="code_for_good_img-container">
+          <img src="img/code_for_good_image.jpeg" alt="Example image of Code For Good event" width="700" height="700">
+        </div>  
         
         <p id="eventOne-description">
             Being a part of nation-wide hackathon was the best part during my undergrad. It was even more special since it was organized by JPMorgan Chase. The goal of the hackathon was to collaborate 
@@ -58,7 +61,9 @@
 
         <p id="eventTwoTitle"> Association For Computing Machinery(ACM) Club </p>
 
-        <img src="img/acm_image.jpeg" id="acm_img" alt="ACM logo image" width="700" height="700">
+        <div id="acm_img-container">
+          <img src="img/acm_image.jpeg" alt="ACM logo image" width="700" height="700">
+        </div>  
         
         <p id="eventTwo-description">
             I was also part of an awesome Computer Science club called ACM. The goal of the ACM club was to collaborate with college peers to solve some of the interesting programming problems. Every Tuesdays or Wednesdays, 
