Every pages are now good with UI and are in working state

--- a/index.html
+++ b/index.html
@@ -39,24 +39,28 @@
     </div>
   
     <div id="education">
-      <h2> Education </h2>
-      <img id="ud_image" alt="Image of UD" src="img/UD_image.jpeg" width="100" height="100">
-      <b> School - </b> University Of Delaware <br>
-      <b> Major - </b> Computer Science <br>
-      <b> School Year - </b> Senior <br>
-      <b> Graduation Date - </b> May 2022 <br>
-      <b> Concentration - </b> Network Systems <br>
-    </div>
+      <h2 class="homepageSectionsTitle"> Education </h2>
+      <div class="homepageSectionsContent">
+        <img id="ud_image" alt="Image of UD" src="img/UD_image.jpeg" width="100" height="100">
+        <b> School - </b> University Of Delaware <br>
+        <b> Major - </b> Computer Science <br>
+        <b> School Year - </b> Senior <br>
+        <b> Graduation Date - </b> May 2022 <br>
+        <b> Concentration - </b> Network Systems <br>
+      </div>
+    </div>  
 
     <br>
     <br>
 
     <div id="postGraduateGoals">
       <br>
-      <h2> Post-Graduation Goals </h2>
-      <p> Following my graduation, I would work with J.P. Morgan Chase & Co. as a Full-Time<br> Software Engineer.
-          Because I would join J.P. Morgan Chase & Co., I don't plan on <br> to attend grad school too soon.
-      </p>
+      <h2 class="homepageSectionsTitle"> Post-Graduation Goals </h2>
+      <div class="homepageSectionsContent">
+        <p> Following my graduation, I would work with J.P. Morgan Chase & Co. as a Full-Time<br> Software Engineer.
+            Because I would join J.P. Morgan Chase & Co., I don't plan on <br> to attend grad school too soon.
+        </p>
+      </div>  
     </div>
 
     <br>
@@ -64,21 +68,23 @@
 
     <div id="webDevelopmentAspect">  
       <br>
-      <h2> Web Development </h2>
-      <p> The aspects of web development that I am most interested in are as follows: </p>
-      <ul id="bulleted-list">
-        <li> Visual Design </li>
-        <li> Content </li>
-        <li> Web/Mobile Friendly </li>
-        <li> User Interaction </li>
-      </ul>
+      <h2 class="homepageSectionsTitle"> Web Development </h2>
+      <div class="homepageSectionsContent">
+        <p> The aspects of web development that I am most interested in are as follows: </p>
+        <ul id="bulleted-list">
+          <li> Visual Design </li>
+          <li> Content </li>
+          <li> Web/Mobile Friendly </li>
+          <li> User Interaction </li>
+        </ul>
+      </div>  
     </div>
     
     <br>
     <br>
 
     <div id="hobbiesInterests">
-      <h2> Hobbies/Interests </h2>
+      <h2 class="homepageSectionsTitle"> Hobbies/Interests </h2>
 
       &nbsp; &nbsp;
       <img src="img/singing_image.jpg" alt="Image of a Mic" width="300" height="300"> &nbsp; &nbsp;   
@@ -94,7 +100,7 @@
       <img src="img/watching_sports_image.jpg" alt="Image of a TV Remote and Sports channel" width="300" height="300">
       <br>
 
-      <b id="nature-img-text"> Walking out in nature </b>
+      <b id="nature-img-text"> Nature Walk </b>
       <b id="sports-img-text"> Watching sports </b> 
     </div>
   
@@ -102,7 +108,7 @@
     <br>
 
     <div id="interestingFact">
-      <h2> Interesting Fact </h2>
+      <h2 class="homepageSectionsTitle"> Interesting Fact </h2>
       <img id="small_baby_image" alt="Image of a small baby" src="img/small_baby_image.jpeg" width="200" height="200">
       <p> &nbsp; I was born on midnight of December 31<sup>st</sup>, 1999. This <br> &nbsp; means it was a change of a Century(from 20th to 21st). <br> &nbsp; Thus, my closed ones also call me <b>millennium boy.</b> </p>
     </div>
