--- a/contact_form.html
+++ b/contact_form.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="viewport" content="width=device-width">
         <title> Contact - Raj Trivedi </title>
         <script type="module" src="src/form.js"> </script>
         <link rel="stylesheet" href="css/styles.css">
