--- a/work.html
+++ b/work.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html lang="en">
  <head>
-  <meta name="viewport" content="width=device-width">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="css/styles.css">
 
   <title> Work - Raj Trivedi </title>
