--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     <div id="education">
       <h2 class="homepageSectionsTitle"> Education </h2>
       <div class="homepageSectionsContent">
-        <img id="ud_image" alt="Image of UD" src="img/UD_image.jpeg" width="100" height="100">
+        <img id="ud_image" class="homepageImages" alt="Image of UD" src="img/UD_image.jpeg" width="100" height="100">
         <b> School - </b> University Of Delaware <br>
         <b> Major - </b> Computer Science <br>
         <b> School Year - </b> Senior <br>
@@ -58,8 +58,9 @@
       <br>
       <h2 class="homepageSectionsTitle"> Post-Graduation Goals </h2>
       <div class="homepageSectionsContent">
-        <p> Following my graduation, I would work with J.P. Morgan Chase & Co. as a Full-Time<br> Software Engineer.
-            Because I would join J.P. Morgan Chase & Co., I don't plan on <br> to attend grad school too soon.
+        <img id="jpmc_image" class="homepageImages" alt="Image of JPMC Logo" src="img/jpmorgan-logo-img.png" width="150" height="100">
+        <p> Following my graduation, I would work with J.P. Morgan Chase & Co. as <br> a Full-Time Software Engineer.
+            Because I would join J.P. Morgan Chase <br> & Co., I don't plan on to attend grad school too soon.
         </p>
       </div>  
     </div>
@@ -87,35 +88,22 @@
     <div id="hobbiesInterests">
       <h2 class="homepageSectionsTitle"> Hobbies/Interests </h2>
 
-      &nbsp; &nbsp;
-      <img src="img/singing_image.jpg" alt="Image of a Mic" width="300" height="300"> &nbsp; &nbsp;   
-      <img src="img/meditation_image.jpg" alt="Image of a person meditating" width="300" height="300">     
-      <br>
+      <div class="homepageSectionsContent">
+       <p> Personally, one of my favorite hobbies/interests is <i>going on nature walks</i>. Whenever I get chance, during my college or at home, I prefer to go on a brief walk. This walk could be sometimes around my 
+           college campus but mostly around my residental community. Nature walks in either of my two favorite places instantly connects me to nature. Furthermore, nature walks also turns out to be a healing for my monotous 
+           routine. <br><br>
 
-      <b id="singing-img-text"> Singing </b>
-      <b id="meditation-img-text"> Meditation </b>
-      <br> 
-      <br> &nbsp; &nbsp;
+           Another hobbies/interests that I have is <i>singing.</i> Singing is not something that I do daily, however, it still gives me that same happiness as I get from <i>nature walks.</i> Any suggestions for song that I 
+           could practice singing would be really awesome! :) <br><br>
 
-      <img src="img/nature_image.jpg" alt="Image of a trees in Fall" width="300" height="300"> &nbsp; &nbsp;
-      <img src="img/watching_sports_image.jpg" alt="Image of a TV Remote and Sports channel" width="300" height="300">
-      <br>
-
-      <b id="nature-img-text"> Nature Walk </b>
-      <b id="sports-img-text"> Watching sports </b> 
-    </div>
+           Another hobbies/interests that I have is <i> doing meditation.</i> Meditation is yet another tool that reduces my stress and makes me really calm. Meditation also helps me gain a new perspective on stressful 
+           situations. Meditation, especially, also helps me increase my patience and tolerance towards unexpected situations.
+       </p>    
+      </div>
+    </div>  
   
     <br>
     <br>
-
-    <div id="interestingFact">
-      <h2 class="homepageSectionsTitle"> Interesting Fact </h2>
-      <img id="small_baby_image" alt="Image of a small baby" src="img/small_baby_image.jpeg" width="200" height="200">
-      <p> &nbsp; I was born on midnight of December 31<sup>st</sup>, 1999. This <br> &nbsp; means it was a change of a Century(from 20th to 21st). <br> &nbsp; Thus, my closed ones also call me <b>millennium boy.</b> </p>
-    </div>
-  </div>  
-
-  <br>
 
   <div class="footer">
    <br>
