--- a/work.html
+++ b/work.html
@@ -83,7 +83,7 @@
 
     <h2 id="workpageSectionTwoTitle"> RESUME </h2>
     <div id="workpageSectionTwo">
-        <iframe src="/local/resume.pdf#toolbar=0" width="60%" height="960px" title="My Resume"></iframe>
+        <iframe src="/local/resume.pdf#toolbar=0" title="My Resume"></iframe>
         <br>
         <br>
         <a href="/local/resume.pdf" download="Trivedi, Raj_Resume.pdf"> <button> Download </button></a>
