--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     <div id="education">
       <h2 class="homepageSectionsTitle"> Education </h2>
       <div class="homepageSectionsContent">
-        <img id="ud_image" class="homepageImages" alt="Image of UD" src="img/UD_image.jpeg" width="100" height="100">
+        <img id="ud_image" alt="Image of UD" src="img/UD_image.jpeg" width="100" height="100">
         <b> School - </b> University Of Delaware <br>
         <b> Major - </b> Computer Science <br>
         <b> School Year - </b> Senior <br>
@@ -58,7 +58,7 @@
       <br>
       <h2 class="homepageSectionsTitle"> Post-Graduation Goals </h2>
       <div class="homepageSectionsContent">
-        <img id="jpmc_image" class="homepageImages" alt="Image of JPMC Logo" src="img/jpmorgan-logo-img.png" width="150" height="100">
+        <img id="jpmc_image" alt="Image of JPMC Logo" src="img/jpmorgan-logo-img.png" width="150" height="100">
         <p> Following my graduation, I would work with J.P. Morgan Chase & Co. as <br> a Full-Time Software Engineer.
             Because I would join J.P. Morgan Chase <br> & Co., I don't plan on to attend grad school too soon.
         </p>
