Fixed text for ResumeViewerNotSupportedSection in Work Page

--- a/work.html
+++ b/work.html
@@ -90,11 +90,10 @@
             <a href="/local/resume.pdf" download="Trivedi, Raj_Resume.pdf"> <button> Download </button></a>
         </div>
         <div id="resumeNotSupportedSection">
-            <p> Resume Viewer is not supported in browser with small width. Either view it externally or download it.</p>
+            <p> Resume Viewer is not supported in this browser because of its insufficient width. :(</p>
             <br>
             <br>
             <a href="/local/resume.pdf" target="_blank"> <button> View Externally </button></a>
-            <a href="/local/resume.pdf" download="Trivedi, Raj_Resume.pdf"> <button> Download </button></a>
         </div>   
 
         <script>
