--- a/index.html
+++ b/index.html
@@ -101,6 +101,16 @@
        </p>    
       </div>
     </div>  
+    <script>
+      if(window.innerWidth < 500){
+        document.getElementById("ud_image").style = "float: right";
+        document.getElementById("jpmc_image").style = "float: right";
+      }
+      else{
+        document.getElementById("ud_image").style = "float: left";
+        document.getElementById("jpmc_image").style = "float: left";
+      }
+    </script>
   
     <br>
     <br>
