Organized all html files into its folder "html"

--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
 
   <div class="header">
    <a href="index.html" id="homePageLink">Home</a> &nbsp; &nbsp;
-   <a href="work.html" id="workPageLink">Work</a> &nbsp; &nbsp;
-   <a href="events.html" id="eventsPageLink"> Extracurricular Events</a> &nbsp; &nbsp;
+   <a href="html/work.html" id="workPageLink">Work</a> &nbsp; &nbsp;
+   <a href="html/events.html" id="eventsPageLink"> Extracurricular Events</a> &nbsp; &nbsp;
    <span class="dropdown">
      <a href="javascript:void(0)" class="dropbtn">Class Links</a> &nbsp; &nbsp;
      <div class="dropdown-content">
@@ -28,7 +28,7 @@
        <a href="https://paultownshend.github.io/personalWebsite/">Previous Student</a>
      </div>
    </span>
-   <a href="contact_form.html" id="contactFormLink">Contact</a> &nbsp; &nbsp;
+   <a href="html/contact_form.html" id="contactFormLink">Contact</a> &nbsp; &nbsp;
   </div>
 
   <div id="homepage-container">
@@ -120,9 +120,9 @@
    <br>
    <br>
    <a href="index.html">Home</a> &nbsp; &nbsp;
-   <a href="work.html">Work</a> &nbsp; &nbsp;
-   <a href="events.html"> Extracurricular Events</a> &nbsp; &nbsp;
-   <a href="contact_form.html"> Contact</a> &nbsp; &nbsp;
+   <a href="html/work.html">Work</a> &nbsp; &nbsp;
+   <a href="html/events.html"> Extracurricular Events</a> &nbsp; &nbsp;
+   <a href="html/contact_form.html"> Contact</a> &nbsp; &nbsp;
    <br>
    <br>
    <br>
