--- a/html/contact_form.html
+++ b/html/contact_form.html
@@ -3,8 +3,8 @@
     <head>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title> Contact - Raj Trivedi </title>
-        <script type="module" src="src/form.js"> </script>
-        <link rel="stylesheet" href="css/styles.css">
+        <script type="module" src="/src/form.js"> </script>
+        <link rel="stylesheet" href="/css/styles.css">
         <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/emailjs-com@3/dist/email.min.js"></script>
 
     </head>
@@ -18,7 +18,7 @@
        Course Number: CISC474 010
    -->
         <div class="header">
-            <a href="index.html" id="homePageLink">Home</a> &nbsp; &nbsp;
+            <a href="/index.html" id="homePageLink">Home</a> &nbsp; &nbsp;
             <a href="work.html" id="workPageLink">Work</a> &nbsp; &nbsp;
             <a href="events.html" id="eventsPageLink"> Extracurricular Events</a> &nbsp; &nbsp;
             <span class="dropdown">
@@ -37,9 +37,9 @@
         <div id="form-container-for-laptop">
             <h2> Connect </h2>
             <p>Please use the form on this page to <br> send a direct e-mail to me. While I <br> maintain a busy schedule, I will do <br> my best to respond in a timely manner. </p> <br>
-            <img src="img/linkedin-logo-png.png" onclick="window.location.href='https://www.linkedin.com/in/raj-trivedi/'" id="linkedin-logo-img" alt="LinkedIn Logo Image" width="30" height="30"> &nbsp;&nbsp;
-            <img src="img/github-logo-png.png" onclick="window.location.href='https://github.com/bluehenraj'" id="github-logo-img" alt="GitHub Logo Image" width="30" height="30"> &nbsp;&nbsp;
-            <a href="mailto:triudrav@udel.edu"><img src="img/mail-logo-png.png" id="mail-logo-img" alt="Mail Logo Image" width="30" height="30"></a>
+            <img src="/img/linkedin-logo-png.png" onclick="window.location.href='https://www.linkedin.com/in/raj-trivedi/'" id="linkedin-logo-img" alt="LinkedIn Logo Image" width="30" height="30"> &nbsp;&nbsp;
+            <img src="/img/github-logo-png.png" onclick="window.location.href='https://github.com/bluehenraj'" id="github-logo-img" alt="GitHub Logo Image" width="30" height="30"> &nbsp;&nbsp;
+            <a href="mailto:triudrav@udel.edu"><img src="/img/mail-logo-png.png" id="mail-logo-img" alt="Mail Logo Image" width="30" height="30"></a>
             <form id="contact_form">
 
                 <p id="successMessage"> </p>
@@ -132,7 +132,7 @@
             <br>
             <br>
             <br>
-            <a href="index.html">Home</a> &nbsp; &nbsp;
+            <a href="/index.html">Home</a> &nbsp; &nbsp;
             <a href="work.html">Work</a> &nbsp; &nbsp;
             <a href="events.html"> Extracurricular Events</a> &nbsp; &nbsp;
             <a href="contact_form.html">Contact</a> &nbsp; &nbsp;
@@ -142,9 +142,9 @@
             <div id="social-media-icons-container">
                 <br>
                 <br>
-                <img src="img/linkedin-logo-png.png" onclick="window.location.href='https://www.linkedin.com/in/raj-trivedi/'" id="linkedin-logo-img" alt="LinkedIn Logo Image" width="30" height="30"> &nbsp;&nbsp;
-                <img src="img/github-logo-png.png" onclick="window.location.href='https://github.com/bluehenraj'" id="github-logo-img" alt="GitHub Logo Image" width="30" height="30"> &nbsp;&nbsp;
-                <a href="mailto:triudrav@udel.edu"><img src="img/mail-logo-png.png" id="mail-logo-img" alt="Mail Logo Image" width="30" height="30"></a>
+                <img src="/img/linkedin-logo-png.png" onclick="window.location.href='https://www.linkedin.com/in/raj-trivedi/'" id="linkedin-logo-img" alt="LinkedIn Logo Image" width="30" height="30"> &nbsp;&nbsp;
+                <img src="/img/github-logo-png.png" onclick="window.location.href='https://github.com/bluehenraj'" id="github-logo-img" alt="GitHub Logo Image" width="30" height="30"> &nbsp;&nbsp;
+                <a href="mailto:triudrav@udel.edu"><img src="/img/mail-logo-png.png" id="mail-logo-img" alt="Mail Logo Image" width="30" height="30"></a>
                 <br>
                 <br>
             </div>
