--- a/html/events.html
+++ b/html/events.html
@@ -3,7 +3,7 @@
 <html lang="en">
  <head>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="css/styles.css">
+  <link rel="stylesheet" href="/css/styles.css">
 
   <title> Extracurricular Events - Raj Trivedi </title>
  </head>
@@ -18,7 +18,7 @@
    -->
 
   <div class="header">
-   <a href="index.html" id="homePageLink">Home</a> &nbsp; &nbsp;
+   <a href="/index.html" id="homePageLink">Home</a> &nbsp; &nbsp;
    <a href="work.html" id="workPageLink">Work</a> &nbsp; &nbsp;
    <a href="events.html" id="eventsPageLink"> Extracurricular Events</a> &nbsp; &nbsp;
    <span class="dropdown">
@@ -48,7 +48,7 @@
         <p id="eventOneTitle"> Code For Good(CFG) Hackathon </p>
 
         <div id="code_for_good_img-container">
-          <img src="img/code_for_good_image.jpeg" alt="Example image of Code For Good event" width="700" height="700">
+          <img src="/img/code_for_good_image.jpeg" alt="Example image of Code For Good event" width="700" height="700">
         </div>  
         
         <p id="eventOne-description">
@@ -63,7 +63,7 @@
         <p id="eventTwoTitle"> Association For Computing Machinery(ACM) Club </p>
 
         <div id="acm_img-container">
-          <img src="img/acm_image.jpeg" alt="ACM logo image" width="700" height="700">
+          <img src="/img/acm_image.jpeg" alt="ACM logo image" width="700" height="700">
         </div>  
         
         <p id="eventTwo-description">
@@ -81,7 +81,7 @@
    <br>
    <br>
    <br>
-   <a href="index.html">Home</a> &nbsp; &nbsp;
+   <a href="/index.html">Home</a> &nbsp; &nbsp;
    <a href="work.html">Work</a> &nbsp; &nbsp;
    <a href="events.html"> Extracurricular Events</a> &nbsp; &nbsp;
    <a href="contact_form.html"> Contact</a> &nbsp; &nbsp;
@@ -91,9 +91,9 @@
    <div id="social-media-icons-container">
     <br>
     <br>
-    <img src="img/linkedin-logo-png.png" onclick="window.location.href='https://www.linkedin.com/in/raj-trivedi/'" id="linkedin-logo-img" alt="LinkedIn Logo Image" width="30" height="30"> &nbsp;&nbsp;
-    <img src="img/github-logo-png.png" onclick="window.location.href='https://github.com/bluehenraj'" id="github-logo-img" alt="GitHub Logo Image" width="30" height="30"> &nbsp;&nbsp;
-    <a href="mailto:triudrav@udel.edu"><img src="img/mail-logo-png.png" id="mail-logo-img" alt="Mail Logo Image" width="30" height="30"></a>
+    <img src="/img/linkedin-logo-png.png" onclick="window.location.href='https://www.linkedin.com/in/raj-trivedi/'" id="linkedin-logo-img" alt="LinkedIn Logo Image" width="30" height="30"> &nbsp;&nbsp;
+    <img src="/img/github-logo-png.png" onclick="window.location.href='https://github.com/bluehenraj'" id="github-logo-img" alt="GitHub Logo Image" width="30" height="30"> &nbsp;&nbsp;
+    <a href="mailto:triudrav@udel.edu"><img src="/img/mail-logo-png.png" id="mail-logo-img" alt="Mail Logo Image" width="30" height="30"></a>
     <br>
     <br>
    </div>
