Added doc title comments in all web pages

--- a/html/events.html
+++ b/html/events.html
@@ -12,7 +12,7 @@
 
    <!--
        Name: Raj Trivedi
-       Assignment Name: Personal Website 2
+       Assignment Name: Responsive Personal Portfolio Website
        UDEL email address: triudrav@udel.edu
        Course Number: CISC474 010
    -->
