--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
    <!--
        Name: Raj Trivedi
-       Assignment Name: Personal Website 2
+       Assignment Name: Responsive Personal Portfolio Website
        UDEL email address: triudrav@udel.edu
        Course Number: CISC474 010
    -->
