Minor grammar fix in Hobbies/Interests section of Home Page

--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
            could practice singing would be really awesome! :) <br><br>
 
            Another hobbies/interests that I have is <i> doing meditation.</i> Meditation is yet another tool that reduces my stress and makes me really calm. Meditation also helps me gain a new perspective on stressful 
-           situations. Meditation, especially, also helps me increase my patience and tolerance towards unexpected situations.
+           situations. Meditation, especially, also increases my patience and tolerance towards unexpected situations.
        </p>    
       </div>
     </div>  
