Trying to fix Home Page against HTML Checker

--- a/index.html
+++ b/index.html
@@ -111,9 +111,9 @@
         document.getElementById("jpmc_image").style = "float: left";
       }
     </script>
-  
-    <br>
-    <br>
+  </div>  
+  <br>
+  <br>
 
   <div class="footer">
    <br>
