Fixing Work Page to work against HTML Checker

--- a/html/work.html
+++ b/html/work.html
@@ -87,13 +87,13 @@
             <iframe src="/local/resume.pdf#toolbar=0" title="My Resume"></iframe>
             <br>
             <br>
-            <a href="/local/resume.pdf" download="Trivedi, Raj_Resume.pdf"> <button> Download </button></a>
+            <a href="/local/resume.pdf" class="anchorButtons" download="Trivedi, Raj_Resume.pdf">Download</a>
         </div>
         <div id="resumeNotSupportedSection">
             <p> Resume Viewer is not supported in this browser because of its insufficient width. :(</p>
             <br>
             <br>
-            <a href="/local/resume.pdf" target="_blank"> <button> View Externally </button></a>
+            <a href="/local/resume.pdf" class="anchorButtons" target="_blank">View Externally</a>
         </div>   
 
         <script>
