--- a/html/work.html
+++ b/html/work.html
@@ -93,13 +93,14 @@
             <p> Resume Viewer is not supported in this browser because of its insufficient width. :(</p>
             <br>
             <br>
-            <a href="/local/resume.pdf" class="anchorButtons" target="_blank">View Externally</a>
+            <a href="/local/resume.pdf" class="anchorButtons" id="view-externally-btn" target="_blank">View Externally</a>
         </div>   
 
         <script>
             if(window.innerWidth <= 770){
                 document.getElementById("resumeViewerSection").style.display = "none";
                 document.getElementById("resumeNotSupportedSection").style.display = "block";
+                document.getElementById("view-externally-btn").style = "background-color: #199319; color: white; padding: 30px 50px; text-decoration: none;"
             }
             else{
                 document.getElementById("resumeViewerSection").style.display = "block";
