Fixed the View Externally button which was not showing up earlier

--- a/html/work.html
+++ b/html/work.html
@@ -87,13 +87,13 @@
             <iframe src="/local/resume.pdf#toolbar=0" title="My Resume"></iframe>
             <br>
             <br>
-            <a href="/local/resume.pdf" class="anchorButtons" download="Trivedi, Raj_Resume.pdf">Download</a>
+            <a href="/local/resume.pdf" id="download-btn" download="Trivedi, Raj_Resume.pdf">Download</a>
         </div>
         <div id="resumeNotSupportedSection">
             <p> Resume Viewer is not supported in this browser because of its insufficient width. :(</p>
             <br>
             <br>
-            <a href="/local/resume.pdf" class="anchorButtons" id="view-externally-btn" target="_blank">View Externally</a>
+            <a href="/local/resume.pdf" id="view-externally-btn" target="_blank">View Externally</a>
         </div>   
 
         <script>
