--- a/html/contact_form.html
+++ b/html/contact_form.html
@@ -76,14 +76,16 @@
 
         </div>
         <script>
-            if(window.innerWidth <= 945){
-                document.getElementById("form-container").style = "position: relative; left: 0px; top: -2px; text-align: center";
-                document.getElementById("contact_form").style = "position: relative; left: 0px; top: 10px; text-align: center";
-            }
-            else{
-                document.getElementById("form-container").style = "position: relative; top: 100px; left: 200px";
-                document.getElementById("contact_form").style = "position: relative; left: 400px; top: -220px;";
-            }
+            setInterval(function(){
+                    if(window.innerWidth <= 945){
+                        document.getElementById("form-container").style = "position: relative; left: 0px; top: -2px; text-align: center";
+                        document.getElementById("contact_form").style = "position: relative; left: 0px; top: 10px; text-align: center";
+                    }
+                    else{
+                        document.getElementById("form-container").style = "position: relative; top: 100px; left: 200px";
+                        document.getElementById("contact_form").style = "position: relative; left: 400px; top: -220px;";
+                    }
+            } , 500);
         </script>
 
         <br>
