--- a/index.html
+++ b/index.html
@@ -22,11 +22,11 @@
    <a href="html/events.html" id="eventsPageLink"> Extracurricular Events</a> &nbsp; &nbsp;
    <span class="dropdown">
      <a href="javascript:void(0)" class="dropbtn">Class Links</a> &nbsp; &nbsp;
-     <div class="dropdown-content">
+     <span class="dropdown-content">
        <a href="https://mattm401.github.io">CISC474 Course Website</a>
        <a href="https://acastro0726.github.io/">Next Student</a>
        <a href="https://paultownshend.github.io/personalWebsite/">Previous Student</a>
-     </div>
+     </span>
    </span>
    <a href="html/contact_form.html" id="contactFormLink">Contact</a> &nbsp; &nbsp;
   </div>
