--- a/html/contact_form.html
+++ b/html/contact_form.html
@@ -5,7 +5,7 @@
         <title> Contact - Raj Trivedi </title>
         <script type="module" src="/src/form.js"> </script>
         <link rel="stylesheet" href="/css/styles.css">
-        <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/emailjs-com@3/dist/email.min.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/emailjs-com@3/dist/email.min.js"></script>
 
     </head>
 
