--- a/html/contact_form.html
+++ b/html/contact_form.html
@@ -7,6 +7,16 @@
         <link rel="stylesheet" href="/css/styles.css">
         <script src="https://cdn.jsdelivr.net/npm/emailjs-com@3/dist/email.min.js"></script>
 
+        <!-- Global site tag (gtag.js) - Google Analytics -->
+        <script async src="https://www.googletagmanager.com/gtag/js?id=UA-211590821-1"></script>
+        <script>
+            window.dataLayer = window.dataLayer || [];
+            function gtag(){dataLayer.push(arguments);}
+            gtag('js', new Date());
+
+            gtag('config', 'UA-211590821-1');
+        </script>
+
     </head>
 
     <body id="contact_form_body">
